[package]
name = "near-socialdb-client"
version = "0.2.2"
edition = "2021"
authors = ["FroVolod <frol_off@meta.ua>", "frol <frolvlad@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bos-cli-rs/near-socialdb-client-rs"
description = "near-socialdb-client-rs is crate for work with data in near-social."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
url = { version = "2", features = ["serde"] }

near-crypto = { git = "https://github.com/Fiono11/nearcore", branch = "olaf", package = "near-crypto" }
near-primitives = { git = "https://github.com/Fiono11/nearcore", branch = "olaf", package = "near-primitives" }
near-jsonrpc-client = { git = "https://github.com/Fiono11/near-jsonrpc-client-rs", rev = "8f9b025bf7b9ffe0105578963e81b9d69aa23145" }
near-jsonrpc-primitives = { git = "https://github.com/Fiono11/nearcore", branch = "olaf", package = "near-jsonrpc-primitives" }

near-token = "0.2.0"
